# cava

./: .gitignore  Makefile.am  cava.c
display/: init.c  init.h
display/shaders/: default.frag  visualizer.vert
glad/include/glad/: glad.h
glad/src/: glad.c
output/: terminal_noncurses.c
